src/lr/internal/parser/yacc/grammar.output

state 0
	$accept: .grammar $end 

	TOKEN  shift 7
	TYPE  shift 8
	START  shift 5
	RULE_DEF  shift 9
	.  error

	rword  goto 4
	def  goto 3
	defs  goto 2
	rule  goto 6
	grammar  goto 1

state 1
	$accept:  grammar.$end 

	$end  accept
	.  error


state 2
	grammar:  defs.additional_sections 
	defs:  defs.def 
	defs:  defs.def ';' 
	additional_sections: .    (3)

	TOKEN  shift 7
	TYPE  shift 8
	START  shift 5
	RULE_DEF  shift 9
	.  reduce 3 (src line 83)

	rword  goto 4
	def  goto 11
	rule  goto 6
	additional_sections  goto 10

state 3
	defs:  def.    (7)
	defs:  def.';' 

	';'  shift 12
	.  reduce 7 (src line 103)


state 4
	def:  rword.'<' IDENTIFIER '>' nonempty_ident_list 
	def:  rword.nonempty_ident_list 

	IDENTIFIER  shift 15
	'<'  shift 13
	.  error

	nonempty_ident_list  goto 14

state 5
	def:  START.nonempty_ident_list 

	IDENTIFIER  shift 15
	.  error

	nonempty_ident_list  goto 16

state 6
	def:  rule.    (12)

	.  reduce 12 (src line 128)


state 7
	rword:  TOKEN.    (13)

	.  reduce 13 (src line 133)


state 8
	rword:  TYPE.    (14)

	.  reduce 14 (src line 137)


state 9
	rule:  RULE_DEF.rule_body 
	rule:  RULE_DEF.labeled_clauses 
	rule_body: .    (21)

	LABEL  shift 20
	.  reduce 21 (src line 171)

	rule_body  goto 17
	labeled_clause  goto 19
	labeled_clauses  goto 18

state 10
	grammar:  defs additional_sections.    (1)
	additional_sections:  additional_sections.additional_section 

	SECTION_MARKER  shift 22
	.  reduce 1 (src line 73)

	additional_section  goto 21

state 11
	defs:  defs def.    (5)
	defs:  defs def.';' 

	';'  shift 23
	.  reduce 5 (src line 95)


state 12
	defs:  def ';'.    (8)

	.  reduce 8 (src line 107)


state 13
	def:  rword '<'.IDENTIFIER '>' nonempty_ident_list 

	IDENTIFIER  shift 24
	.  error


state 14
	def:  rword nonempty_ident_list.    (10)
	nonempty_ident_list:  nonempty_ident_list.IDENTIFIER 

	IDENTIFIER  shift 25
	.  reduce 10 (src line 119)


state 15
	nonempty_ident_list:  IDENTIFIER.    (16)

	.  reduce 16 (src line 147)


state 16
	def:  START nonempty_ident_list.    (11)
	nonempty_ident_list:  nonempty_ident_list.IDENTIFIER 

	IDENTIFIER  shift 25
	.  reduce 11 (src line 123)


state 17
	rule:  RULE_DEF rule_body.    (17)
	rule_body:  rule_body.IDENTIFIER 
	rule_body:  rule_body.CHARACTER 

	IDENTIFIER  shift 26
	CHARACTER  shift 27
	.  reduce 17 (src line 153)


state 18
	rule:  RULE_DEF labeled_clauses.    (18)
	labeled_clauses:  labeled_clauses.'|' labeled_clause 

	'|'  shift 28
	.  reduce 18 (src line 157)


state 19
	labeled_clauses:  labeled_clause.    (23)

	.  reduce 23 (src line 180)


state 20
	labeled_clause:  LABEL.rule_body 
	rule_body: .    (21)

	.  reduce 21 (src line 171)

	rule_body  goto 29

state 21
	additional_sections:  additional_sections additional_section.    (2)

	.  reduce 2 (src line 79)


state 22
	additional_section:  SECTION_MARKER.IDENTIFIER SECTION_CONTENT 

	IDENTIFIER  shift 30
	.  error


state 23
	defs:  defs def ';'.    (6)

	.  reduce 6 (src line 99)


state 24
	def:  rword '<' IDENTIFIER.'>' nonempty_ident_list 

	'>'  shift 31
	.  error


state 25
	nonempty_ident_list:  nonempty_ident_list IDENTIFIER.    (15)

	.  reduce 15 (src line 143)


state 26
	rule_body:  rule_body IDENTIFIER.    (19)

	.  reduce 19 (src line 163)


state 27
	rule_body:  rule_body CHARACTER.    (20)

	.  reduce 20 (src line 167)


state 28
	labeled_clauses:  labeled_clauses '|'.labeled_clause 

	LABEL  shift 20
	.  error

	labeled_clause  goto 32

state 29
	rule_body:  rule_body.IDENTIFIER 
	rule_body:  rule_body.CHARACTER 
	labeled_clause:  LABEL rule_body.    (24)

	IDENTIFIER  shift 26
	CHARACTER  shift 27
	.  reduce 24 (src line 186)


state 30
	additional_section:  SECTION_MARKER IDENTIFIER.SECTION_CONTENT 

	SECTION_CONTENT  shift 33
	.  error


state 31
	def:  rword '<' IDENTIFIER '>'.nonempty_ident_list 

	IDENTIFIER  shift 15
	.  error

	nonempty_ident_list  goto 34

state 32
	labeled_clauses:  labeled_clauses '|' labeled_clause.    (22)

	.  reduce 22 (src line 176)


state 33
	additional_section:  SECTION_MARKER IDENTIFIER SECTION_CONTENT.    (4)

	.  reduce 4 (src line 89)


state 34
	def:  rword '<' IDENTIFIER '>' nonempty_ident_list.    (9)
	nonempty_ident_list:  nonempty_ident_list.IDENTIFIER 

	IDENTIFIER  shift 25
	.  reduce 9 (src line 114)


17 terminals, 12 nonterminals
25 grammar rules, 35/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
61 working sets used
memory: parser 17/120000
2 extra closures
29 shift entries, 1 exceptions
16 goto entries
2 entries saved by goto default
Optimizer space used: output 35/120000
35 table entries, 0 zero
maximum spread: 17, maximum offset: 31
